--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
+    "mysql2": "^3.1.2",
     "path": "^0.12.7"
   }
 }
