--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/srinithi19/Expense-Tracker#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
-    "path": "^0.12.7"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.2",
+    "path": "^0.12.7",
+    "sequelize": "^6.28.0"
   }
 }
