--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_NAME='expense_db'
 DB_USER='root'
 DB_PASSWORD='password'
+JAWSDB_URL = 'mysql://imepntsramx2qcc1:rhtox32gi2zlj21w@qao3ibsa7hhgecbv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uvzsxizj9s3jyvb2'
